--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-AUTH_GOOGLE_CLIENT_ID=901788289621-rv60aal3u9lp77da7frfch9vakjh0f09.apps.googleusercontent.com
-AUTH_GOOGLE_CLIENT_SECRET=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
+AUTH_GOOGLE_CLIENT_ID=
+AUTH_GOOGLE_CLIENT_SECRET=
 
-DB_URI=mongodb+srv://earechwa:wIbT5vMPd3Kf1OFx@prompt.y8yhtsv.mongodb.net/?retryWrites=true&w=majority
-DB_NAME=prompt
+DB_URI=
+DB_NAME=
