--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "formik": "^2.4.1",
     "mongoose": "^7.2.3",
     "next": "13.4.5",
     "next-auth": "^4.22.1",
@@ -22,6 +23,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "zod": "^3.21.4",
+    "zod-formik-adapter": "^1.2.0"
   }
 }
